--- a/sponsors.html
+++ b/sponsors.html
@@ -77,7 +77,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col l6 s12">
-					<h5 class="white-text">CAMS CSC</h5>
+					<h5 class="white-text">CAMS CTF</h5>
 					<p class="grey-text text-lighten-4">A Capture the Flag competition created by the California Academy of Mathematics and Science for middle and high school students.</p>
 				</div>
 				<div class="col l3 s12">
