--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,7 @@
 </head>
 
 <body>
-    <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav hide-on-large-only"><i class="medium mdi-navigation-menu orange-text text-color-orange-accent-2"></i></a>
-    </div>
+    <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav hide-on-large-only"><i class="medium mdi-navigation-menu indigo-text text-color-indigo-darken-1"></i></a></div>
     <ul id="nav-mobile" class="side-nav fixed">
 		<li class="logo"><a id="logo-container" href="index.html" class="brand-logo">
             <object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
@@ -69,7 +68,7 @@
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<textarea name="message" class="materialize-textarea" required></textarea>
+								<textarea name="message" class="materialize-textarea validate" required></textarea>
 								<label>Message</label>
 							</div>
 						</div>
@@ -79,7 +78,7 @@
 								<label for="email">Email</label>
 							</div>
 						</div>
-						<button class="btn waves-effect waves-ligh orange accent-2" type="submit" name="action">Submit
+						<button class="btn waves-effect waves-light indigo darken-1" type="submit" name="action">Submit
 							<i class="mdi-content-send right"></i>
 						</button>
 					</form>
