--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 		<div class="container">
 			<div class="section">
 				<h5>CTF</h5>
-				<p>Capture the flag is a competition in which teams solve challenges and find 'flags.' These flags are not physical flags. Instead, they are a string of characters that can be submitted for points.</p>
+				<p>Capture the flag is a competition in which teams solve challenges and find 'flags.' These flags are not physical flags. Instead, they are strings of characters that can be submitted for points.</p>
 			</div>
 			<div class="divider"></div>
 
