--- a/faq.html
+++ b/faq.html
@@ -77,19 +77,19 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-action-help"></i>How do I participate?</div>
 							<div class="collapsible-body">
-								<p>Sign up! The buttons are very blatant.</p>
+								<p>Team registration will be available one month before competition begins. Sign up for the mailing list </p>
 							</div>
 						</li>
 						<li>
 							<div class="collapsible-header"><i class="mdi-social-school"></i>Who can participate?</div>
 							<div class="collapsible-body">
-								<p>All students currently enrolled in middle school or high school can participate.</p>
+								<p>Anyone can participate. However, only teams composed of students currently enrolled in middle school or high school will be eligible for awards.</p>
 							</div>
 						</li>
 						<li>
 							<div class="collapsible-header"><i class="mdi-device-access-time"></i>When is this?</div>
 							<div class="collapsible-body">
-								<p>The competition will begin on April 16th at 5:00 PM PST and end on April 24th at 5:00 PM PST.</p>
+								<p>The competition will begin on April 17th at 5:00 PM PST and end on April 24th at 10:00 PM PST.</p>
 							</div>
 						</li>
 						<li>
