--- a/index.html
+++ b/index.html
@@ -81,7 +81,32 @@
 						</div>
 					</div>
 				</div>
+				<br>
 			</div>
+			
+			<div class="section">
+				<div class="row center">
+					<h5 class="header col s12 light">Stay updated! Subscribe to be reminded when registration opens.</h5>
+				</div>
+				<div class="row">
+					<form method="post" action="http://camsctf.us10.list-manage.com/subscribe/post?u=fca31272a4fc22a114563f0ce&amp;id=0258f882fd" class="col s12 center">
+						<div class="row">
+							<div class="input-field col s12 l6 offset-l3">
+								<i class="mdi-content-mail prefix"></i>
+								<label for="mce-EMAIL">Email Address</label>
+								<input type="email" value="" name="EMAIL" class="validate" id="mce-EMAIL">
+							</div>
+						</div>
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+						<div style="position: absolute; left: -5000px;"><input type="text" name="b_fca31272a4fc22a114563f0ce_0258f882fd" tabindex="-1" value=""></div>
+						<button class="btn waves-effect waves-light indigo darken-1" type="submit" name="action">Subscribe
+							<i class="mdi-content-send right"></i>
+						</button>
+					</form>
+				</div>
+			</div>
+						
 		</div>
 		<br>
 	</main>
