--- a/sponsors.html
+++ b/sponsors.html
@@ -56,13 +56,13 @@
 			<div class="section">
 				<div class="row">
 					<div class="col s12 m6 center offset-m3">
-						<div class="card green darken-4 z-depth-2">
+						<div class="card indigo darken-1 z-depth-2">
 							<div class="card-content white-text">
 								<span class="card-title">Sponsor Us</span>
 								<p>Give us a hand with out competition by letting us give out awesome rewards to the smart students who can crack the challenges and come out on top.</p>
 							</div>
 							<div class="card-action">
-								<a href="contact.html">Contact Us</a>
+								<a href="contact.html" style="color:#37DC74"><b>Contact Us</b></a>
 							</div>
 						</div>
 					</div>
