Client-side required.

--- a/contact.html
+++ b/contact.html
@@ -58,11 +58,11 @@
 					<form class="col s12" action="contact.php">
 						<div class="row">
 							<div class="input-field col s12 m6 l6">
-								<input id="first_namecontact" name="first" type="text" class="validate">
+								<input id="first_namecontact" name="first" type="text" class="validate" required>
 								<label for="first_namecontact" class="">First Name</label>
 							</div>
 							<div class="input-field col s12 m6 l6">
-								<input id="last_namecontact" name="last" type="text" class="validate">
+								<input id="last_namecontact" name="last" type="text" class="validate" required>
 								<label for="last_namecontact">Last Name</label>
 							</div>
 						</div>
@@ -74,7 +74,7 @@
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<input id="email" name="email" type="email" class="validate">
+								<input id="email" name="email" type="email" class="validate" required>
 								<label for="email">Email</label>
 							</div>
 						</div>
