--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<div class="input-field col s12 l6 offset-l3">
 								<i class="mdi-content-mail prefix"></i>
 								<label for="mce-EMAIL">Email Address</label>
-								<input type="email" value="" name="EMAIL" class="validate" id="mce-EMAIL">
+								<input type="email" value="" name="EMAIL" class="validate" id="mce-EMAIL" required>
 							</div>
 						</div>
 						<div class="response" id="mce-error-response" style="display:none"></div>
