--- a/sponsors.html
+++ b/sponsors.html
@@ -62,7 +62,7 @@
 								<p>Give us a hand with out competition by letting us give out awesome rewards to the smart students who can crack the challenges and come out on top.</p>
 							</div>
 							<div class="card-action">
-								<a href="contact.html" style="color:#37DC74"><b>Contact Us</b></a>
+								<a href="contact.html" style="color:#4CAF50"><b>Contact Us</b></a>
 							</div>
 						</div>
 					</div>
