--- a/faq.html
+++ b/faq.html
@@ -77,7 +77,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-action-help"></i>How do I participate?</div>
 							<div class="collapsible-body">
-								<p>Team registration will be available one month before competition begins. Sign up for the mailing list </p>
+								<p>Team registration will open around one month before competition begins. Sign up for the mailing list to be reminded.</p>
 							</div>
 						</li>
 						<li>
