--- a/sponsors.html
+++ b/sponsors.html
@@ -56,7 +56,7 @@
 			<div class="section">
 				<div class="row">
 					<div class="col s12 m6 center offset-m3">
-						<div class="card indigo darken-1 z-depth-2">
+						<div class="card indigo z-depth-2">
 							<div class="card-content white-text">
 								<span class="card-title">Sponsor Us</span>
 								<p>Give us a hand with out competition by letting us give out awesome rewards to the smart students who can crack the challenges and come out on top.</p>
