Green + indigo accent.

--- a/sponsors.html
+++ b/sponsors.html
@@ -56,13 +56,13 @@
 			<div class="section">
 				<div class="row">
 					<div class="col s12 m6 center offset-m3">
-						<div class="card indigo z-depth-2">
-							<div class="card-content white-text">
-								<span class="card-title">Sponsor Us</span>
+						<div class="card green lighten-5 depth-2">
+							<div class="card-content black-text">
+								<span class="card-title indigo-text text-darken-1"><b>Sponsor Us</b></span>
 								<p>Give us a hand with out competition by letting us give out awesome rewards to the smart students who can crack the challenges and come out on top.</p>
 							</div>
 							<div class="card-action">
-								<a href="contact.html" style="color:#4CAF50"><b>Contact Us</b></a>
+								<a href="contact.html"><b>Contact Us</b></a>
 							</div>
 						</div>
 					</div>
