--- a/sponsors.html
+++ b/sponsors.html
@@ -58,7 +58,7 @@
 					<div class="col s12 m6 center offset-m3">
 						<div class="card green lighten-5 depth-2">
 							<div class="card-content black-text">
-								<span class="card-title indigo-text text-darken-1"><b>Sponsor Us</b></span>
+								<span class="card-title black-text">Sponsor Us</span>
 								<p>Give us a hand with out competition by letting us give out awesome rewards to the smart students who can crack the challenges and come out on top.</p>
 							</div>
 							<div class="card-action">
