--- a/about.html
+++ b/about.html
@@ -83,6 +83,36 @@
 				<p>CAMS CSC is a computer science and cyber-security club in the LBUSD school California Academy of Mathematics and Science (CAMS). We do a variety of activities including teaching computer science concepts and running competitions.</p>
 				<p>Why do we do this? We just... love computers. We want to share our passion of computer science and show everyone how exciting the field of computer science and cyber-security can be.</p>
 			</div>
+			<div class="divider"></div>
+			
+			<div class="section">
+				<h5>Sample Challenges</h5>
+				<p>Try a few sample challenges to get acquainted with problem types in the competition.</p>
+				<div class="row">
+					<div class="col s12 m6">
+						<div class="icon-block">
+							<h3 class="center indigo-text text-accent-2"><i class="mdi-communication-vpn-key"></i></h3>
+							<h5 class="center">Cryptography</h5>
+							<p class="light">Gur nycunorg unf 26 yrggref. 26 qvivqrq ol 2 vf rdhny gb 13. EBG13 vf n fvzcyr flzzrgevp pvcure. Rapbqvat naq qrpbqvat ner qbar va gur fnzr jnl. Fcrnxvat bs juvpu, gur synt vf <b>{ebg_va_13}</b>.</p>
+						</div>
+					</div>
+					<div class="col s12 m6">
+						<div class="icon-block">
+							<h3 class="center indigo-text text-accent-2"><i class="mdi-action-search"></i></h3>
+							<h5 class="center">Forensics</h5>
+							<p class="light">One must employ the magic of looking inside an image.</p>
+							<p class="center"><img class="materialboxed" width="20%" src="sample/search.png"></p>
+						</div>
+					</div>
+					<div class="col s12 m6">
+						<div class="icon-block">
+							<h3 class="center indigo-text text-accent-2"><i class="mdi-communication-vpn-key"></i></h3>
+							<h5 class="center">Exploitation</h5>
+							<p class="light">I believe the super secret flag is right <b>here<!-- {sup3r_s3cr3t_f1ag} --></b>. What? You don't see it? Well I'm pretty sure I left it back there though. Have you tried looking more closely at the word "here"? It's probably easier if you're on a computer.</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<br>
 	</main>
