--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 								<label for="email">Email</label>
 							</div>
 						</div>
-						<button class="btn waves-effect waves-light indigo darken-1" type="submit" name="action">Submit
+						<button class="btn waves-effect waves-light indigo accent-2" type="submit" name="action">Submit
 							<i class="mdi-content-send right"></i>
 						</button>
 					</form>
