--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<h2 class="center green-text"><i class="mdi-content-flag"></i></h2>
 							<h5 class="center">Flag</h5>
 
-							<p class="light">In this game of wits, you and your team will solve a variety of security and computer science based challenges to earn points. Every challenge will yield a flag - a recognizable string of characters enclosed by {braces}. Your team can submit these flags for points and advance further up the scoreboard.</p>
+							<p class="light">In this game of wits, you and your team will solve a variety of security and computer science based challenges to earn points. Every challenge will yield a flag - a recognizable string of characters. Your team can submit these flags for points and advance further up the scoreboard.</p>
 						</div>
 					</div>
 
@@ -100,7 +100,7 @@
 						<div class="response" id="mce-error-response" style="display:none"></div>
 						<div class="response" id="mce-success-response" style="display:none"></div>
 						<div style="position: absolute; left: -5000px;"><input type="text" name="b_fca31272a4fc22a114563f0ce_0258f882fd" tabindex="-1" value=""></div>
-						<button class="btn waves-effect waves-light indigo darken-1" type="submit" name="action">Subscribe
+						<button class="btn waves-effect waves-light indigo accent-2" type="submit" name="action">Subscribe
 							<i class="mdi-content-send right"></i>
 						</button>
 					</form>
