--- a/contact.html
+++ b/contact.html
@@ -58,23 +58,23 @@
 					<form class="col s12" action="contact.php">
 						<div class="row">
 							<div class="input-field col s12 m6 l6">
-								<input id="first_namecontact" name="first" type="text" class="validate" required>
+								<input id="first_namecontact" name="first" type="text" class="validate">
 								<label for="first_namecontact" class="">First Name</label>
 							</div>
 							<div class="input-field col s12 m6 l6">
-								<input id="last_namecontact" name="last" type="text" class="validate" required>
+								<input id="last_namecontact" name="last" type="text" class="validate">
 								<label for="last_namecontact">Last Name</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<textarea name="message" class="materialize-textarea validate" required></textarea>
+								<textarea name="message" class="materialize-textarea validate"></textarea>
 								<label>Message</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-field col s12">
-								<input id="email" name="email" type="email" class="validate" required>
+								<input id="email" name="email" type="email" class="validate">
 								<label for="email">Email</label>
 							</div>
 						</div>
