--- a/about.html
+++ b/about.html
@@ -136,7 +136,14 @@
 						<div class="icon-block">
 							<h3 class="center indigo-text text-accent-2"><i class="mdi-action-explore"></i></h3>
 							<h5 class="center">Reconnaissance</h5>
-							<p class="light">A creator of CCTF is in love with RMS. If you <a href="/contact.html"><b>contact</b></a> CCTF and pretend to be RMS, I'm sure the system would love to give you the flag. I'm quite confident that spoofing the first and last name is enough to get you the flag.</p>
+							<p class="light">A creator of CCTF is in love with RMS. If you <a href="/contact.html"><b>contact</b></a> CCTF and pretend to be RMS, I'm sure the system would love to give you the flag. Also, you don't need a message, but you can send 'GIVE ME FLAG :D' if you want.</p>
+						</div>
+					</div>
+					<div class="col s12 m6">
+						<div class="icon-block">
+							<h3 class="center indigo-text text-accent-2"><i class="mdi-social-share"></i></h3>
+							<h5 class="center">Miscellaneous</h5>
+							<p class="light">A creator of CCTF is in love with RMS. If you <a href="/contact.html"><b>contact</b></a> CCTF and pretend to be RMS, I'm sure the system would love to give you the flag. Also, you don't need a message, but you can send 'GIVE ME FLAG :D' if you want.</p>
 						</div>
 					</div>
 				</div>
@@ -188,13 +195,12 @@
 		</div>
 	</footer>
 
-
-
-    <!--  Scripts-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/init.js"></script>
-	<script src="js/mobile.js"></script>
+	
+	<!-- Don't cheat! :p -->
+    <script src="js/solutions.js"></script>
 	
 </body>
 
