--- a/about.html
+++ b/about.html
@@ -89,30 +89,30 @@
 				<h5>Sample Challenges</h5>
 				<p>Try a few sample challenges to get acquainted with problem types in the competition.</p>
 				<div class="row">
-					<div class="col s12 m6">
+					<div class="col s12 l6">
 						<div class="icon-block">
-							<h3 class="center indigo-text text-accent-2"><i class="mdi-communication-vpn-key"></i></h3>
+							<h3 class="center indigo-text text-accent-2"><a id="crypt" href="#solutions"><i class="mdi-communication-vpn-key"></i></a></h3>
 							<h5 class="center">Cryptography</h5>
 							<p class="light">Gur nycunorg unf 26 yrggref. 26 qvivqrq ol 2 vf rdhny gb 13. EBG13 vf n fvzcyr flzzrgevp pvcure. Rapbqvat naq qrpbqvat ner qbar va gur fnzr jnl. Fcrnxvat bs juvpu, gur synt vf <b>{ebg_va_13}</b>.</p>
 						</div>
 					</div>
-					<div class="col s12 m6">
+					<div class="col s12 l6">
 						<div class="icon-block">
-							<h3 class="center indigo-text text-accent-2"><i class="mdi-hardware-security"></i></h3>
+							<h3 class="center indigo-text text-accent-2"><a id="expl" href="#solutions"><i class="mdi-hardware-security"></i></a></h3>
 							<h5 class="center">Exploitation</h5>
 							<p class="light">I believe the super secret flag is right <b>here<!-- {sup3r_s3cr3t_f1ag} --></b>. What? You don't see it? Well I'm pretty sure I left it back there though. Have you tried looking more closely at the word "here"? It's probably easier if you're on a computer.</p>
 						</div>
 					</div>
-					<div class="col s12 m6">
+					<div class="col s12 l6">
 						<div class="icon-block">
-							<h3 class="center indigo-text text-accent-2"><i class="mdi-action-search"></i></h3>
+							<h3 class="center indigo-text text-accent-2"><a id="fore" href="#solutions"><i class="mdi-action-search"></i></a></h3>
 							<h5 class="center">Forensics</h5>
 							<p class="light">I was told that <b><a href="sample/search.png">search.png</a></b> had something hidden inside of it. What's inside of the image? I've looked at every pixel and I'm pretty sure that nothing is inside of the image. That's 262144 pixels!!!</p>
 						</div>
 					</div>
-					<div class="col s12 m6">
+					<div class="col s12 l6">
 						<div class="icon-block">
-							<h3 class="center indigo-text text-accent-2"><i class="mdi-editor-mode-edit"></i></h3>
+							<h3 class="center indigo-text text-accent-2"><a id="prog" href="#solutions"><i class="mdi-editor-mode-edit"></i></a></h3>
 							<h5 class="center">Programming</h5>
 							<p class="light">The JavaScript function <b>is_correct(input)</b> will check whether the string input is the flag. It may be helpful to call the function in your browser's console. When you pass it the flag, it will tell you the flag. What a useful function.</p>
 							
@@ -132,16 +132,16 @@
 							
 						</div>
 					</div>
-					<div class="col s12 m6">
+					<div class="col s12 l6">
 						<div class="icon-block">
-							<h3 class="center indigo-text text-accent-2"><i class="mdi-action-explore"></i></h3>
+							<h3 class="center indigo-text text-accent-2"><a id="recon" href="#solutions"><i class="mdi-action-explore"></i></a></h3>
 							<h5 class="center">Reconnaissance</h5>
 							<p class="light">A creator of CCTF is in love with RMS. If you <a href="/contact.html"><b>contact</b></a> CCTF and pretend to be RMS, I'm sure the system would love to give you the flag. Also, you don't need a message, but you can send 'GIVE ME FLAG :D' if you want.</p>
 						</div>
 					</div>
-					<div class="col s12 m6">
+					<div class="col s12 l6">
 						<div class="icon-block">
-							<h3 class="center indigo-text text-accent-2"><i class="mdi-social-share"></i></h3>
+							<h3 class="center indigo-text text-accent-2"><a id="misc" href="#solutions"><i class="mdi-social-share"></i></a></h3>
 							<h5 class="center">Miscellaneous</h5>
 							<p class="light">A creator of CCTF is in love with RMS. If you <a href="/contact.html"><b>contact</b></a> CCTF and pretend to be RMS, I'm sure the system would love to give you the flag. Also, you don't need a message, but you can send 'GIVE ME FLAG :D' if you want.</p>
 						</div>
@@ -151,6 +151,14 @@
 		</div>
 		<br>
 	</main>
+	
+	<div id="solutions" class="modal">
+		<h4></h4>
+		<div id="s_content"></div>
+		<div class="action-bar">
+			<a href="#" class="waves-effect waves-light btn indigo accent-2 modal-action modal-close">Got it</a>
+		</div>
+	</div>
 	
 	<footer class="green page-footer">
 		<div class="container">
