--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 			<div class="container">
 				<h1 class="header center green-text">About</h1>
 				<div class="row center">
-					<h5 class="header col s12 light">tl;dr - CCTF is awesome. Don't miss out.</h5>
+					<h5 class="header col s12 light">tl;dr - CCTF is awesome. Don't miss out. Also, try some sample challenges.</h5>
 				</div>
 			</div>
 		</div>
@@ -87,7 +87,7 @@
 			
 			<div class="section">
 				<h5>Sample Challenges</h5>
-				<p>Try a few sample challenges to get acquainted with problem types in the competition.</p>
+				<p>Try a few sample challenges to get acquainted with problem types in the competition. To see a detailed solution, click on the icon above each challenge. Don't cheat...</p>
 				<div class="row">
 					<div class="col s12 l6">
 						<div class="icon-block">
@@ -207,7 +207,7 @@
     <script src="js/materialize.min.js"></script>
     <script src="js/init.js"></script>
 	
-	<!-- Don't cheat! :p -->
+	<!-- Don't cheat! Try the problems first.-->
     <script src="js/solutions.js"></script>
 	
 </body>
