--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
 						<div class="icon-block">
 							<h3 class="center indigo-text text-accent-2"><a id="misc" href="#solutions"><i class="mdi-social-share"></i></a></h3>
 							<h5 class="center">Miscellaneous</h5>
-							<p class="light">A creator of CCTF is in love with RMS. If you <a href="/contact.html"><b>contact</b></a> CCTF and pretend to be RMS, I'm sure the system would love to give you the flag. Also, you don't need a message, but you can send 'GIVE ME FLAG :D' if you want.</p>
+							<p class="light">Wireshark is used to analyze network data. Take this <a href="camsctf.com/sample/capture.pcapng"><b>capture.pcacpng</b></a> and see if you can find an image within the data. The image holds the flag.</p>
 						</div>
 					</div>
 				</div>
