--- a/faq.html
+++ b/faq.html
@@ -71,7 +71,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-hardware-computer"></i>What are the challenges?</div>
 							<div class="collapsible-body">
-								<p>The challenges will fall into one of the following categories: cryptography, forensics, exploitation, programming, and miscellaneous.</p>
+								<p>The challenges will fall into one of the following categories: cryptography, forensics, exploitation, programming, reconnaissance, and miscellaneous.</p>
 							</div>
 						</li>
 						<li>
@@ -101,7 +101,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-editor-attach-money"></i>Are there prizes?</div>
 							<div class="collapsible-body">
-								<p>Aside from knowledge, there probably will be prizes award to the top 3 teams.</p>
+								<p>Aside from knowledge, there probably will be prizes awarded to top placing teams.</p>
 							</div>
 						</li>
 						<li>
@@ -125,7 +125,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-social-public"></i>Where can I start learning?</div>
 							<div class="collapsible-body">
-								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/">GitBook</a>. You can also look at other CTF competitions by searching on Google.</p>
+								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/"><b>GitBook</b></a>. You can also look at other CTF competitions by searching on Google or trying out sample challenges on the <a href="about.html"><b>About</b></a> page.</p>
 							</div>
 						</li>
 					</ul>
