--- a/sponsors.html
+++ b/sponsors.html
@@ -56,10 +56,10 @@
 			<div class="section">
 				<div class="row">
 					<div class="col s12 m6 center offset-m3">
-						<div class="card green lighten-5 depth-2">
+						<div class="card grey lighten-5 depth-2">
 							<div class="card-content black-text">
 								<span class="card-title black-text">Sponsor Us</span>
-								<p>Give us a hand with out competition by letting us give out awesome rewards to the smart students who can crack the challenges and come out on top.</p>
+								<p>Give us a hand with the competition by letting us distribute awesome rewards to the smart students who can crack the challenges and come out on top.</p>
 							</div>
 							<div class="card-action">
 								<a href="contact.html"><b>Contact Us</b></a>
