--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
 						<div class="icon-block">
 							<h3 class="center indigo-text text-accent-2"><a id="misc" href="#solutions"><i class="mdi-social-share"></i></a></h3>
 							<h5 class="center">Miscellaneous</h5>
-							<p class="light">I caught someone stealing my flag. Wireshark is used to analyze network data. Take this <a href="camsctf.com/sample/capture.pcapng"><b>capture.pcacpng</b></a> and see if you can find an image within the data. The image holds the flag.</p>
+							<p class="light">I caught someone trying to steal something from the server! Take this <a href="sample/capture.pcapng"><b>capture.pcacpng</b></a> and see if you can make sense of it. You'll need Wireshark to find out what was unjustly taken from me. My precious file.</p>
 						</div>
 					</div>
 				</div>
@@ -153,10 +153,10 @@
 	</main>
 	
 	<div id="solutions" class="modal">
-		<h4></h4>
+		<h4>Solution</h4>
 		<div id="s_content"></div>
 		<div class="action-bar">
-			<a href="#" class="waves-effect waves-light btn indigo accent-2 modal-action modal-close">Got it</a>
+			<a href="#" class="btn waves-effect waves-light indigo accent-2 modal-action modal-close">Got it</a>
 		</div>
 	</div>
 	
