--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
     <ul id="nav-mobile" class="side-nav fixed">
 		<li class="logo"><a id="logo-container" href="index.html" class="brand-logo">
             <object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
-        <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="about.html">About</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="sponsors.html">Sponsors</a></li>
+        <li><a href="/">Home</a></li>
+        <li class="active"><a href="about">About</a></li>
+        <li><a href="faq">FAQ</a></li>
+        <li><a href="contact">Contact</a></li>
+        <li><a href="sponsors">Sponsors</a></li>
     </ul>
 	
 	<main>
