Contact US on Sponsor page

--- a/sponsors.html
+++ b/sponsors.html
@@ -62,7 +62,7 @@
 								<p>Give us a hand with the competition by letting us distribute awesome rewards to the smart students who can crack the challenges and come out on top.</p>
 							</div>
 							<div class="card-action">
-								<a href="contact.html"><b>Contact Us</b></a>
+								<a href="contact"><b>Contact Us</b></a>
 							</div>
 						</div>
 					</div>
