Footer Update Href

--- a/sponsors.html
+++ b/sponsors.html
@@ -82,13 +82,13 @@
 				<div class="col l3 s12">
 					<h5 class="white-text">Pages</h5>
 					<ul>
-						<li><a class="white-text" href="contact.html">Contact</a>
+						<li><a class="white-text" href="contact">Contact</a>
 						</li>
-						<li><a class="white-text" href="faq.html">FAQ</a>
+						<li><a class="white-text" href="faq">FAQ</a>
 						</li>
-						<li><a class="white-text" href="about.html">About</a>
+						<li><a class="white-text" href="about">About</a>
 						</li>
-						<li><a class="white-text" href="sponsors.html">Sponsors</a>
+						<li><a class="white-text" href="sponsors">Sponsors</a>
 						</li>
 					</ul>
 				</div>
