--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav hide-on-large-only"><i class="medium mdi-navigation-menu indigo-text text-color-indigo-darken-1"></i></a></div>
     <ul id="nav-mobile" class="side-nav fixed">
-		<li class="logo"><a id="logo-container" href="index.html" class="brand-logo">
+		<li class="logo"><a id="logo-container" href="/" class="brand-logo">
             <object id="front-page-logo" type="image/png" data="logo.png"></object></a></li>
         <li><a href="/">Home</a></li>
         <li><a href="about">About</a></li>
