--- a/faq.html
+++ b/faq.html
@@ -125,7 +125,7 @@
 						<li>
 							<div class="collapsible-header"><i class="mdi-social-public"></i>Where can I start learning?</div>
 							<div class="collapsible-body">
-								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/"><b>GitBook</b></a>. You can also look at other CTF competitions by searching on Google or trying out sample challenges on the <a href="about.html"><b>About</b></a> page.</p>
+								<p>While this competition will provide you with hints along the way, you can begin learning by viewing our incomplete <a href="http://bobbyluig.gitbooks.io/csc-learn/"><b>GitBook</b></a>. You can also look at other CTF competitions by searching on Google or try out sample challenges on the <a href="about.html"><b>About</b></a> page.</p>
 							</div>
 						</li>
 					</ul>
