Crying over sp errors.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
 							<h5 class="center">Computer Science</h5>
 
-							<p class="light">We believe that computer science education should be exciting and dynamic. Creating a CTF competition using bleeding edge technology iwas the perfect way to express our passions. The entire infrastructure is powered by Django and created using the newest material design specifications.</p>
+							<p class="light">We believe that computer science education should be exciting and dynamic. Creating a CTF competition using bleeding edge technology was the perfect way to express our passions. The entire infrastructure is powered by Django and created using the newest material design specifications.</p>
 						</div>
 					</div>
 
