--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="row">
 					<div class="col s12 m4">
 						<div class="icon-block">
-							<h2 class="center green-text"><i class="mdi-content-flag"></i></h2>
+							<h2 class="center indigo-text text-accent-2"><i class="mdi-content-flag"></i></h2>
 							<h5 class="center">Flag</h5>
 
 							<p class="light">In this game of wits, you and your team will solve a variety of security and computer science based challenges to earn points. Every challenge will yield a flag - a recognizable string of characters. Your team can submit these flags for points and advance further up the scoreboard.</p>
@@ -66,7 +66,7 @@
 
 					<div class="col s12 m4">
 						<div class="icon-block">
-							<h2 class="center green-text"><i class="mdi-hardware-desktop-windows"></i></h2>
+							<h2 class="center indigo-text text-accent-2"><i class="mdi-hardware-desktop-windows"></i></h2>
 							<h5 class="center">Computer Science</h5>
 
 							<p class="light">We believe that computer science education should be exciting and dynamic. Creating a CTF competition using bleeding edge technology was the perfect way to express our passions. The entire infrastructure is powered by Django and created using the newest material design specifications.</p>
@@ -75,7 +75,7 @@
 
 					<div class="col s12 m4">
 						<div class="icon-block">
-							<h2 class="center green-text"><i class="mdi-social-people"></i></h2>
+							<h2 class="center indigo-text text-accent-2"><i class="mdi-social-people"></i></h2>
 							<h5 class="center">Cooperation</h5>
 							<p class="light">Create teams of up to 4 members. You will need all the security and computer science skills you have. There are many challenges and categories. Diversify your team and get people with different strengths. Remember, the more people there are on your team, the less blame each person receives.</p>
 						</div>
